Добавил Launch экран

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/fonts/
+    - assets/icons/
   fonts:
     - family: 'SFRounded'
       fonts:
