--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^1.1.0
   flutter_bloc: ^7.0.0
   equatable: ^2.0.7
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
