--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_bloc: ^7.0.0
   equatable: ^2.0.7
   shared_preferences: ^2.5.3
+  get_it: ^8.0.3
+  talker_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
