--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,14 @@ dependencies:
   shared_preferences: ^2.5.3
   get_it: ^8.0.3
   talker_flutter: ^4.8.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  json_serializable: ^6.9.5
+  build_runner: ^2.4.15
 
 flutter:
   uses-material-design: true
