--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,14 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   http: ^1.1.0
-  flutter_bloc: ^7.0.0
+  flutter_bloc: ^9.1.1
   equatable: ^2.0.7
   shared_preferences: ^2.5.3
   get_it: ^8.0.3
   talker_flutter: ^4.8.0
+  talker_bloc_logger: ^4.8.3
   json_annotation: ^4.9.0
+  auto_route: ^10.1.0+1
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +26,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   json_serializable: ^6.9.5
   build_runner: ^2.4.15
+  auto_route_generator: ^10.2.3
 
 flutter:
   uses-material-design: true
