--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,14 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   http: ^1.1.0
+  dio: ^5.8.0+1
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
   shared_preferences: ^2.5.3
   get_it: ^8.0.3
   talker_flutter: ^4.8.0
   talker_bloc_logger: ^4.8.3
+  talker_dio_logger: ^4.8.3
   json_annotation: ^4.9.0
   auto_route: ^10.1.0+1
 
