--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   talker_dio_logger: ^4.8.3
   json_annotation: ^4.9.0
   auto_route: ^10.1.0+1
+  toastification: ^3.0.2
+  app_settings: ^6.1.1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
