--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   toastification: ^3.0.2
   app_settings: ^6.1.1
   permission_handler: ^12.0.0+1
+  package_info_plus: ^8.0.2
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +33,7 @@ dev_dependencies:
   json_serializable: ^6.9.5
   build_runner: ^2.4.15
   auto_route_generator: ^10.2.3
+  mockito: ^5.4.4
 
 flutter:
   uses-material-design: true
